{
  "version": 4,
  "terraform_version": "1.7.1",
  "serial": 176,
  "lineage": "5171efdd-c797-e4fc-cb47-c7d368bf6534",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:967866550848:loadbalancer/net/example/bef3da1a7510a6f7",
            "arn_suffix": "net/example/bef3da1a7510a6f7",
            "dns_name": "example-bef3da1a7510a6f7.elb.ap-northeast-1.amazonaws.com",
            "dns_record_client_routing_policy": "any_availability_zone",
            "enable_cross_zone_load_balancing": false,
            "enable_deletion_protection": false,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:967866550848:loadbalancer/net/example/bef3da1a7510a6f7",
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "example",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-06ae031ec1de8b85a"
              },
              {
                "subnet_id": "subnet-0db04b0c410286302"
              }
            ],
            "subnets": [
              "subnet-06ae031ec1de8b85a",
              "subnet-0db04b0c410286302"
            ],
            "vpc_id": "vpc-0c1d052f6a133f249",
            "zone_id": "Z31USIVHYNEOWT"
          },
          "dependencies": [
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:967866550848:listener/net/example/bef3da1a7510a6f7/9d93cbf082abf1fa",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:967866550848:targetgroup/example/6264c1f8d5718470",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:967866550848:listener/net/example/bef3da1a7510a6f7/9d93cbf082abf1fa",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:967866550848:loadbalancer/net/example/bef3da1a7510a6f7",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "TCP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.example",
            "aws_lb_target_group.example",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:967866550848:targetgroup/example/6264c1f8d5718470",
            "arn_suffix": "targetgroup/example/6264c1f8d5718470",
            "connection_termination": false,
            "deregistration_delay": "30",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "port": "9080",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 5
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:967866550848:targetgroup/example/6264c1f8d5718470",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "example",
            "port": 80,
            "preserve_client_ip": "false",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
                "enable_unhealthy_connection_termination": true
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0c1d052f6a133f249"
          },
          "dependencies": [
            "aws_lb.example",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nginx",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:967866550848:security-group/sg-03df250cef663aa83",
            "description": "nginx security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03df250cef663aa83",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.30.0.0/16"
                ],
                "description": "all traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "examplenginx-sg",
            "name_prefix": "",
            "owner_id": "967866550848",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0c1d052f6a133f249"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:967866550848:network-acl/acl-057beb63964a9af71",
            "default_network_acl_id": "acl-057beb63964a9af71",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-057beb63964a9af71",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "967866550848",
            "subnet_ids": [
              "subnet-0460195bfa194a13a",
              "subnet-06ae031ec1de8b85a",
              "subnet-0a75dd059ecfab3ea",
              "subnet-0db04b0c410286302"
            ],
            "tags": {
              "Name": "example-default",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "example-default",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0c1d052f6a133f249"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:967866550848:route-table/rtb-0c01b2d1e4e2d52ca",
            "default_route_table_id": "rtb-0c01b2d1e4e2d52ca",
            "id": "rtb-0c01b2d1e4e2d52ca",
            "owner_id": "967866550848",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "example-default",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "example-default",
              "Terraform": "true"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0c1d052f6a133f249"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:967866550848:security-group/sg-0916223d577f962c2",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0916223d577f962c2",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "967866550848",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "example-default",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "example-default",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0c1d052f6a133f249"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08e722045a7edb5f8",
            "domain": "vpc",
            "id": "eipalloc-08e722045a7edb5f8",
            "network_border_group": "ap-northeast-1",
            "public_dns": "ec2-43-206-32-55.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "43.206.32.55",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "example-ap-northeast-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "example-ap-northeast-1a",
              "Terraform": "true"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06ae7a5c2d8ea559e",
            "domain": "vpc",
            "id": "eipalloc-06ae7a5c2d8ea559e",
            "network_border_group": "ap-northeast-1",
            "public_dns": "ec2-52-192-211-160.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "52.192.211.160",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "example-ap-northeast-1c",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "example-ap-northeast-1c",
              "Terraform": "true"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:967866550848:internet-gateway/igw-0d8d3426e7aa4a78d",
            "id": "igw-0d8d3426e7aa4a78d",
            "owner_id": "967866550848",
            "tags": {
              "Name": "example",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "example",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0c1d052f6a133f249"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08e722045a7edb5f8",
            "association_id": "eipassoc-058793e5a79b8bfcc",
            "connectivity_type": "public",
            "id": "nat-0664501bf3c281ab3",
            "network_interface_id": "eni-077896fb4cd10bd2e",
            "private_ip": "10.30.101.163",
            "public_ip": "43.206.32.55",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-06ae031ec1de8b85a",
            "tags": {
              "Name": "example-ap-northeast-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "example-ap-northeast-1a",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06ae7a5c2d8ea559e",
            "association_id": "eipassoc-0e6e0d11516edc65a",
            "connectivity_type": "public",
            "id": "nat-0d524cb26677186de",
            "network_interface_id": "eni-0d8b571b4183244d7",
            "private_ip": "10.30.102.162",
            "public_ip": "52.192.211.160",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0db04b0c410286302",
            "tags": {
              "Name": "example-ap-northeast-1c",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "example-ap-northeast-1c",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0a14f5173db9949c11080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0664501bf3c281ab3",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0a14f5173db9949c1",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-02a869dec4746eb391080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0d524cb26677186de",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-02a869dec4746eb39",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0d8d3426e7aa4a78d",
            "id": "r-rtb-0ea445d25c3e5c0601080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0ea445d25c3e5c060",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:967866550848:route-table/rtb-0a14f5173db9949c1",
            "id": "rtb-0a14f5173db9949c1",
            "owner_id": "967866550848",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "example-private-ap-northeast-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "example-private-ap-northeast-1a",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c1d052f6a133f249"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:967866550848:route-table/rtb-02a869dec4746eb39",
            "id": "rtb-02a869dec4746eb39",
            "owner_id": "967866550848",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "example-private-ap-northeast-1c",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "example-private-ap-northeast-1c",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c1d052f6a133f249"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:967866550848:route-table/rtb-0ea445d25c3e5c060",
            "id": "rtb-0ea445d25c3e5c060",
            "owner_id": "967866550848",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "example-public",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "example-public",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c1d052f6a133f249"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-040d066a4ab545554",
            "route_table_id": "rtb-0a14f5173db9949c1",
            "subnet_id": "subnet-0460195bfa194a13a"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0acdbf866a08daf5a",
            "route_table_id": "rtb-02a869dec4746eb39",
            "subnet_id": "subnet-0a75dd059ecfab3ea"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-092d0f63c5d8e5877",
            "route_table_id": "rtb-0ea445d25c3e5c060",
            "subnet_id": "subnet-06ae031ec1de8b85a"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-068239ef8c5d4988d",
            "route_table_id": "rtb-0ea445d25c3e5c060",
            "subnet_id": "subnet-0db04b0c410286302"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:967866550848:subnet/subnet-0460195bfa194a13a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.30.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0460195bfa194a13a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "967866550848",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "example-private-ap-northeast-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "example-private-ap-northeast-1a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0c1d052f6a133f249"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:967866550848:subnet/subnet-0a75dd059ecfab3ea",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.30.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a75dd059ecfab3ea",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "967866550848",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "example-private-ap-northeast-1c",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "example-private-ap-northeast-1c",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0c1d052f6a133f249"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:967866550848:subnet/subnet-06ae031ec1de8b85a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.30.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06ae031ec1de8b85a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "967866550848",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "example-public-ap-northeast-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "example-public-ap-northeast-1a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0c1d052f6a133f249"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:967866550848:subnet/subnet-0db04b0c410286302",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.30.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0db04b0c410286302",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "967866550848",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "example-public-ap-northeast-1c",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "example-public-ap-northeast-1c",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0c1d052f6a133f249"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:967866550848:vpc/vpc-0c1d052f6a133f249",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.30.0.0/16",
            "default_network_acl_id": "acl-057beb63964a9af71",
            "default_route_table_id": "rtb-0c01b2d1e4e2d52ca",
            "default_security_group_id": "sg-0916223d577f962c2",
            "dhcp_options_id": "dopt-03fbf59557eac0f86",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c1d052f6a133f249",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c01b2d1e4e2d52ca",
            "owner_id": "967866550848",
            "tags": {
              "Name": "example",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "example",
              "Terraform": "true"
            }
          }
        }
      ]
    }
  ]
}